--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,21 @@
   </description>
   <url>http://taskana.pro</url>
 
+  <modules>
+    <module>taskana-adapter</module>
+    <module>taskana-adapter-camunda-system-connector</module>
+    <module>taskana-adapter-taskana-connector</module>
+    <module>taskana-adapter-camunda-spring-boot-example</module>
+    <module>taskana-adapter-camunda-listener</module>
+    <module>taskana-adapter-camunda-listener-example</module>
+    <module>taskana-adapter-camunda-outbox-rest</module>
+    <module>taskana-adapter-camunda-outbox-rest-spring-boot-starter</module>
+    <module>taskana-adapter-camunda-wildfly-example</module>
+    <module>taskana-adapter-camunda-spring-boot-test</module>
+    <module>camunda-outbox-example-boot</module>
+    <module>ci/taskana-adapter-sonar-test-coverage</module>
+  </modules>
+
   <properties>
     <java.version>11</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -22,17 +37,19 @@
 
     <version.taskana>4.3.1-SNAPSHOT</version.taskana>
 
+    <!-- build dependencies -->
+    <version.checkstyle>8.39</version.checkstyle>
     <version.maven.jar>3.2.0</version.maven.jar>
     <version.maven-war-plugin>3.3.1</version.maven-war-plugin>
     <version.maven.source>3.2.1</version.maven.source>
     <version.maven.compiler>3.8.1</version.maven.compiler>
-    <version.maven-compiler-plugin>3.5.1</version.maven-compiler-plugin>
     <version.maven.javadoc>3.2.0</version.maven.javadoc>
     <version.maven.failsafe.plugin>3.0.0-M5</version.maven.failsafe.plugin>
     <version.maven.surefire.plugin>3.0.0-M5</version.maven.surefire.plugin>
-    <version.checkstyle>8.39</version.checkstyle>
     <version.maven.checkstyle>3.1.1</version.maven.checkstyle>
-    <version.spring.boot.maven.plugin>2.4.1</version.spring.boot.maven.plugin>
+    <version.maven.spring-boot>2.4.1</version.maven.spring-boot>
+    <version.maven.sonar>3.8.0.2131</version.maven.sonar>
+
     <version.mybatis>3.5.6</version.mybatis>
     <version.spring.mybatis>2.1.4</version.spring.mybatis>
     <version.h2database>1.4.200</version.h2database>
@@ -69,17 +86,21 @@
     <version.maven.gpg>1.6</version.maven.gpg>
     <version.sonatype>1.6.8</version.sonatype>
     <version.jacoco>0.8.6</version.jacoco>
-    <!-- used by jacoco to collect coverage -->
-    <argLine></argLine>
-    <jacoco.file.path>target/site/jacoco-aggregate/jacoco.xml</jacoco.file.path>
-    <jacoco.file.path.1>
-      ${project.basedir}/../taskana-adapter-camunda-system-connector/${jacoco.file.path}
-    </jacoco.file.path.1>
-    <jacoco.file.path.2>
-      ${project.basedir}/../taskana-adapter-camunda-spring-boot-test/${jacoco.file.path}
-    </jacoco.file.path.2>
-    <sonar.coverage.jacoco.xmlReportPaths>${jacoco.file.path.1},${jacoco.file.path.2}
+
+    <!-- sonar settings -->
+    <!--suppress UnresolvedMavenProperty -->
+    <sonar.projectKey>${env.SONAR_PROJECT_KEY}</sonar.projectKey>
+    <!--suppress UnresolvedMavenProperty -->
+    <sonar.organization>${env.SONAR_ORGANIZATION}</sonar.organization>
+    <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.coverage.jacoco.xmlReportPaths>
+      ${project.basedir}/ci/taskana-adapter-sonar-test-coverage/target/site/jacoco-aggregate/jacoco.xml,
+      ${project.basedir}/../ci/taskana-adapter-sonar-test-coverage/target/site/jacoco-aggregate/jacoco.xml,
+      ${project.basedir}/../../ci/taskana-adapter-sonar-test-coverage/target/site/jacoco-aggregate/jacoco.xml
     </sonar.coverage.jacoco.xmlReportPaths>
+    <sonar.sources>src/main/java</sonar.sources>
   </properties>
 
   <developers>
@@ -103,20 +124,6 @@
       <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
-
-  <modules>
-    <module>taskana-adapter</module>
-    <module>taskana-adapter-camunda-system-connector</module>
-    <module>taskana-adapter-taskana-connector</module>
-    <module>taskana-adapter-camunda-spring-boot-sample</module>
-    <module>taskana-adapter-camunda-listener</module>
-    <module>taskana-adapter-camunda-listener-example</module>
-    <module>taskana-adapter-camunda-outbox-rest</module>
-    <module>taskana-adapter-camunda-outbox-rest-spring-boot-starter</module>
-    <module>taskana-adapter-camunda-wildfly-example</module>
-    <module>taskana-adapter-camunda-spring-boot-test</module>
-    <module>camunda-outbox-example-boot</module>
-  </modules>
 
   <repositories>
     <repository>
@@ -171,6 +178,13 @@
                 </goals>
               </execution>
             </executions>
+            <configuration>
+              <!-- The pinentry-mode loopback is necessary to specify and use a passphrase with a gpg key -->
+              <gpgArguments>
+                <arg>--pinentry-mode</arg>
+                <arg>loopback</arg>
+              </gpgArguments>
+            </configuration>
           </plugin>
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
@@ -209,6 +223,13 @@
                 </goals>
               </execution>
             </executions>
+            <configuration>
+              <!-- The pinentry-mode loopback is necessary to specify and use a passphrase with a gpg key -->
+              <gpgArguments>
+                <arg>--pinentry-mode</arg>
+                <arg>loopback</arg>
+              </gpgArguments>
+            </configuration>
           </plugin>
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
@@ -230,29 +251,32 @@
         </repository>
       </distributionManagement>
     </profile>
-    <profile>
-      <id>coverage</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>${version.jacoco}</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>prepare-agent</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
   </profiles>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>${version.maven.sonar}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${version.jacoco}</version>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <!--
       This plugin appends version information into the jar, so that it can be extracted from the jar.
       See TSK-837 for more information
@@ -310,14 +334,10 @@
           </execution>
         </executions>
       </plugin>
-      <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${version.maven.surefire.plugin}</version>
-        <configuration>
-          <argLine>${argLine}</argLine>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
