--- a/taskana-adapter-camunda-spring-boot-example/pom.xml
+++ b/taskana-adapter-camunda-spring-boot-example/pom.xml
@@ -10,15 +10,11 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>taskana-adapter-camunda-spring-boot-sample</artifactId>
+  <artifactId>taskana-adapter-camunda-spring-boot-example</artifactId>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
   <url>http://maven.apache.org</url>
-
-  <properties>
-    <sonar.skip>true</sonar.skip>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -80,7 +76,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${version.spring.boot.maven.plugin}</version>
+        <version>${version.maven.spring-boot}</version>
       </plugin>
     </plugins>
   </build>
