--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
@@ -34,7 +34,7 @@ taskana.adapter.scheduler.run.interval.for.retries.and.blocking.taskevents.in.mi
 # Set URLs of Camunda REST API and associated Camunda task events. The format is
 # <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
 
-taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/rest/engine/default | http://localhost:${server.port}/outbox-rest
+taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/engine-rest/engine/default | http://localhost:${server.port}/outbox-rest
 
 taskana-system-connector-camunda-rest-api-user-name=demo
 taskana-system-connector-camunda-rest-api-user-password=demo
