--- a/taskana-adapter-camunda-spring-boot-test/pom.xml
+++ b/taskana-adapter-camunda-spring-boot-test/pom.xml
@@ -8,8 +8,8 @@
     <version>1.10.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-
   <modelVersion>4.0.0</modelVersion>
+
   <artifactId>taskana-adapter-camunda-spring-boot-test</artifactId>
   <packaging>jar</packaging>
   <name>${project.groupId}:${project.artifactId}</name>
@@ -32,12 +32,12 @@
     <dependency>
       <groupId>org.camunda.bpm.springboot</groupId>
       <artifactId>camunda-bpm-spring-boot-starter</artifactId>
-      <version>${version.camunda.bpm.spring.boot}</version>
+      <version>${version.camunda}</version>
     </dependency>
     <dependency>
       <groupId>org.camunda.bpm.springboot</groupId>
       <artifactId>camunda-bpm-spring-boot-starter-test</artifactId>
-      <version>${version.camunda.bpm.spring.boot.test}</version>
+      <version>${version.camunda}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -56,12 +56,11 @@
         </dependency>
     -->
 
-
     <!-- Camunda REST Api -->
     <dependency>
       <groupId>org.camunda.bpm.springboot</groupId>
       <artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
-      <version>${version.camunda.bpm.spring.boot}</version>
+      <version>${version.camunda}</version>
       <exclusions>
         <exclusion>
           <groupId>org.skyscreamer</groupId>
@@ -74,18 +73,18 @@
     <dependency>
       <groupId>org.camunda.bpm.springboot</groupId>
       <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
-      <version>${version.camunda.bpm.spring.boot.webapps}</version>
+      <version>${version.camunda}</version>
     </dependency>
     <dependency>
       <groupId>org.camunda.bpm</groupId>
       <artifactId>camunda-engine-plugin-spin</artifactId>
+      <version>${version.camunda}</version>
       <scope>compile</scope>
-      <version>${version.camunda.spin.engine.plugin}</version>
     </dependency>
     <dependency>
       <groupId>org.camunda.spin</groupId>
       <artifactId>camunda-spin-dataformat-json-jackson</artifactId>
-      <version>${version.camunda.spin.dataformat.json.jackson}</version>
+      <version>${version.camunda.spin}</version>
     </dependency>
 
     <!-- Adapter modules -->
