--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -12,6 +12,10 @@ on:
   schedule:
     - cron: '0 3 * * *'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.repository }}/${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   JAVA_VERSION: 11
 
@@ -27,10 +31,6 @@ jobs:
     name: Test
     runs-on: ubuntu-20.04
     steps:
-      - name: Cleanup old CI runs on same branch
-        uses: rokroskar/workflow-run-cleanup-action@v0.3.3
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - name: Git checkout
         uses: actions/checkout@v3
       - name: Set up JDK ${{ env.JAVA_VERSION }}
