--- a/taskana-adapter-taskana-connector/pom.xml
+++ b/taskana-adapter-taskana-connector/pom.xml
@@ -44,8 +44,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.ibm.db2.jcc</groupId>
-      <artifactId>db2jcc4</artifactId>
+      <groupId>com.ibm.db2</groupId>
+      <artifactId>jcc</artifactId>
       <version>${version.db2}</version>
       <scope>test</scope>
     </dependency>
@@ -72,13 +72,4 @@
     </dependency>
   </dependencies>
 
-  <!-- this repository is needed to fetch com.ibm.db2.jcc -->
-  <repositories>
-    <repository>
-      <id>novatec public</id>
-      <name>novatec-repository</name>
-      <url>https://repository.novatec-gmbh.de/content/repositories/novatec/</url>
-    </repository>
-  </repositories>
-  
 </project>
