ADPT-160: H2 Update to v2.1.214
To update H2 to 2.x we need to introduce the SET NON_KEYWORDS command. POM is adapted such that h2 is on version 2.1.214. Please not that the taskana version has to be adapted to the new taskana release.

--- a/taskana-adapter-camunda-outbox-rest/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-outbox-rest/src/main/resources/taskana-outbox.properties
@@ -12,7 +12,7 @@ taskana.adapter.outbox.duration.between.task.creation.retries = PT1H
 #taskana.adapter.outbox.datasource.username=postgres
 #taskana.adapter.outbox.datasource.password=postgres
 
-taskana.adapter.outbox.datasource.url=jdbc:h2:mem:camunda;IGNORECASE=TRUE;LOCK_MODE=0;DB_CLOSE_ON_EXIT=FALSE;
+taskana.adapter.outbox.datasource.url=jdbc:h2:mem:camunda;NON_KEYWORDS=KEY,VALUE;IGNORECASE=TRUE;LOCK_MODE=0;DB_CLOSE_ON_EXIT=FALSE;
 taskana.adapter.outbox.datasource.driver=org.h2.Driver
 taskana.adapter.outbox.datasource.username=sa
 taskana.adapter.outbox.datasource.password=sa
