--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/taskana-outbox.properties
@@ -11,7 +11,7 @@ taskana.adapter.outbox.duration.between.task.creation.retries = PT1S
 #taskana.adapter.outbox.datasource.password=postgres
 
 taskana.adapter.outbox.datasource.driver = org.h2.Driver
-taskana.adapter.outbox.datasource.url=jdbc:h2:mem:camunda;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+taskana.adapter.outbox.datasource.url=jdbc:h2:mem:camunda;NON_KEYWORDS=KEY,VALUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 taskana.adapter.outbox.datasource.username=sa
 taskana.adapter.outbox.datasource.password=sa
 
