--- a/camunda-outbox-example-boot/src/main/resources/application.properties
+++ b/camunda-outbox-example-boot/src/main/resources/application.properties
@@ -15,7 +15,7 @@ camunda.bpm.database.type=h2
 #spring.datasource.username = postgres
 #spring.datasource.password = postgres
 
-spring.datasource.url=jdbc:h2:mem:camunda;IGNORECASE=TRUE;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.url=jdbc:h2:mem:camunda;NON_KEYWORDS=KEY,VALUE;IGNORECASE=TRUE;DB_CLOSE_ON_EXIT=FALSE;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=sa
