--- a/taskana-adapter-camunda-wildfly-example/pom.xml
+++ b/taskana-adapter-camunda-wildfly-example/pom.xml
@@ -77,7 +77,6 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>${version.h2database}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.plugin</groupId>
@@ -132,7 +131,8 @@
       -->
       <properties>
         <driver-class>org.h2.Driver</driver-class>
-        <connection-url>datasource.url=jdbc:h2:mem:tca;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE
+        <connection-url>
+          datasource.url=jdbc:h2:mem:tca;NON_KEYWORDS=KEY,VALUE;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE
           SCHEMA IF NOT EXISTS TCA
         </connection-url>
         <driver-name>h2driver</driver-name>
