--- a/taskana-adapter-camunda-spring-boot-example/src/main/resources/taskana.properties
+++ b/taskana-adapter-camunda-spring-boot-example/src/main/resources/taskana.properties
@@ -1,16 +1,11 @@
-taskana.roles.user = group1 | group2|teamlead-1 |teamlead-2 |user-1-1| user-1-1| user-1-2| user-2-1| user-2-2| max|elena|simone
+taskana.roles.user=group1 | group2|teamlead-1 |teamlead-2 |user-1-1| user-1-1| user-1-2| user-2-1| user-2-2| max|elena|simone
 taskana.roles.Admin=name=konrad,Organisation=novatec|admin
-taskana.roles.businessadmin=max|Moritz|businessadmin
-taskana.roles.taskadmin=peter | taskadmin
+taskana.roles.business_admin=max|Moritz|businessadmin
+taskana.roles.task_admin=peter | taskadmin
 taskana.roles.monitor=john|teamlead_2 | monitor
-taskana.domains=DOMAIN_A,DOMAIN_B,DOMAIN_C
-taskana.classification.types=TASK,DOCUMENT
-taskana.classification.categories.task= EXTERNAL, manual, autoMAtic, Process
-taskana.classification.categories.document= EXTERNAL
-
-taskana.jobs.maxRetries=3
-taskana.jobs.batchSize=50
-taskana.jobs.cleanup.runEvery=P1D
-taskana.jobs.cleanup.firstRunAt=2018-07-25T08:00:00Z
-taskana.jobs.cleanup.minimumAge=P14D
+taskana.domains=DOMAIN_A|DOMAIN_B|DOMAIN_C
+taskana.classification.types=TASK|DOCUMENT
+taskana.classification.categories.task=EXTERNAL| manual| autoMAtic| Process
+taskana.classification.categories.document=EXTERNAL
+taskana.jobs.enabled=false
 
