--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <version.taskana>6.0.0-SNAPSHOT</version.taskana>
+    <version.taskana>6.0.2</version.taskana>
 
     <!-- build dependencies -->
     <version.checkstyle>10.3.4</version.checkstyle>
