--- a/taskana-adapter-camunda-wildfly-example/pom.xml
+++ b/taskana-adapter-camunda-wildfly-example/pom.xml
@@ -156,6 +156,14 @@
         <version>${version.maven.spring-boot}</version>
       </plugin>
       <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>${version.maven-war-plugin}</version>
+        <configuration>
+          <attachClasses>true</attachClasses>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.wildfly.plugins</groupId>
         <artifactId>wildfly-maven-plugin</artifactId>
         <version>${version.wildfly.maven.plugin}</version>
