Closes #561 : Integrate TASKANA 6.1.0, Spring 5.3.26 and Spring Boot 2.7.10

--- a/taskana-adapter-camunda-listener-example/pom.xml
+++ b/taskana-adapter-camunda-listener-example/pom.xml
@@ -149,6 +149,11 @@
           </tasks>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>${version.maven-war-plugin}</version>
+      </plugin>
+
     </plugins>
   </build>
 
