--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <version.taskana>6.0.3-SNAPSHOT</version.taskana>
+    <version.taskana>6.1.0</version.taskana>
 
     <!-- build dependencies -->
     <version.checkstyle>10.3.4</version.checkstyle>
@@ -61,9 +61,9 @@
     <version.mybatis>3.5.11</version.mybatis>
     <version.spring.mybatis>2.2.2</version.spring.mybatis>
 
-    <version.spring>5.0.5.RELEASE</version.spring>
+    <version.spring>5.3.26.RELEASE</version.spring>
     <version.spring.core>3.0.0</version.spring.core>
-    <version.spring.boot>2.7.5</version.spring.boot>
+    <version.spring.boot>2.7.10</version.spring.boot>
 
     <version.camunda>7.17.0</version.camunda>
     <version.camunda.bpm.extensions>1.2</version.camunda.bpm.extensions>
